day4/weather-istio/weather-gw.yaml
apiVersion: networking.istio.io/v1alpha3

kind: Gateway

metadata:
  name: weather-gw

spec:
  hosts:
  - "*"
  gateways:
  - weather-gw

  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: weatherappvc
        port:
          number: 80
    rewrite:
      uri: /
  - match:
    - uri:
        exact: /v1
    route:
    - destination:
        host: weatherappvc
        port:
          number: 80
    rewrite:
      uri: /
