day4/weather-istio/weather-vs.yaml
apiVersion: networking.istio.io/v1alpha3

kind: VirtualService

metadata:
  name: weather-vs

spec:
  hosts:
  - "*"
  gateways:
  - weatherapp-gateway

  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: weatherappvc
        port:
          number: 8080
    rewrite:
      uri: /
  - match:
    - uri:
        exact: /v1
    route:
    - destination:
        host: weatherappvc
        port:
          number: 80
    rewrite:
      uri: /
